--- a/src/test/resources/settings.properties
+++ b/src/test/resources/settings.properties
@@ -1,9 +1,4 @@
 url = https://dmidoffice8.esuite.atos-services.net/mp
-#url = https://dmidoffice7.mars.atos.net/mp
-#username = Testbeheerder
-#password = Sep@2017
-
-#url = https://dacceptatiemidoffice.schaveland.nl/mp/zaak/01533142016
-#url = https://dacceptatiemidoffice.schaveland.nl/mp/kcc
 username = emiel1
 password = Test-018
+maxresults=200
