--- a/src/test/resources/settings.properties
+++ b/src/test/resources/settings.properties
@@ -1,6 +1,6 @@
 url = https://dmidoffice8.esuite.atos-services.net/mp
 username = emiel1
-password = Test-018
+password = x
 maxresults = 100
 loggingconsoleoutput = true
 #5 results per second on slow systems.
