--- a/src/test/resources/settings.properties
+++ b/src/test/resources/settings.properties
@@ -1,4 +1,4 @@
-url = https://dmidoffice8.esuite.atos-services.net/mp
+url = http://www.google.nl
 username = emiel1
 password = x
 maxresults = 100
